# OpenGL_FirstStep

./: KlasorOlustur.bat  README.md
Ders02-Ucgen/: CMakeLists.txt
Ders02-Ucgen/include/: kutuphane.hpp
Ders02-Ucgen/src/: kutuphane.cpp  main.cpp
Ders03-Shader/: CMakeLists.txt
Ders03-Shader/include/: shaderprogram.hpp
Ders03-Shader/shaders/: simplefs.glsl  simplevs.glsl
Ders03-Shader/src/: main.cpp  shaderprogram.cpp
Ders04-Uniform/: CMakeLists.txt
Ders04-Uniform/include/: shaderprogram.hpp
Ders04-Uniform/shaders/: simplefs.glsl  simplevs.glsl
Ders04-Uniform/src/: main.cpp  shaderprogram.cpp
Ders05-Yilan/: CMakeLists.txt
Ders05-Yilan/include/: shaderprogram.hpp
Ders05-Yilan/shaders/: simplevs.glsl
Ders05-Yilan/src/: main.cpp  shaderprogram.cpp  square.cpp
Ders06-Circle/: CMakeLists.txt
Ders06-Circle/include/: shaderprogram.hpp
Ders06-Circle/shaders/: simplefs.glsl
Ders06-Circle/src/: main.cpp  shaderprogram.cpp
Ders07-indexBuffer/: CMakeLists.txt
Ders07-indexBuffer/shaders/: simplevs.glsl
Ders07-indexBuffer/src/: glad.c  main.cpp
Ders08-Texture/: CMakeLists.txt
Ders08-Texture/shaders/: simplevs.glsl
Ders08-Texture/src/: main.cpp
Ders09-KaplamaYonetim/: CMakeLists.txt
Ders09-KaplamaYonetim/include/: shaderprogram.hpp  square.hpp
Ders09-KaplamaYonetim/shaders/: simplefs.glsl
Ders09-KaplamaYonetim/src/: main.cpp  shaderprogram.cpp
Ders10-3D/: CMakeLists.txt
Ders10-3D/src/: main.cpp  (+1 more)
Ders11-Cube/: CMakeLists.txt
Ders12-CubeTexture/: CMakeLists.txt
Ders13-Mesh/: CMakeLists.txt
Uygulama1-Tetris/: CMakeLists.txt
(+34 files in other folders)
